# eldri

./: README.md
eldri/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  widget.html
eldri/src/: App.css  App.tsx  Dashboard.tsx  Widget.tsx  ai.ts  index.css  main.tsx  store.ts  useTranscription.ts  useVoiceAnalysis.ts  widget-main.tsx
eldri/src-tauri/: Cargo.toml  tauri.conf.json
eldri/src-tauri/capabilities/: default.json
eldri/src-tauri/src/: Untitled  capture.rs  lib.rs  main.rs
eldri/src/components/: Guide.tsx  Home.tsx  LoginScreen.tsx  Modes.tsx  PlanSelectionScreen.tsx  Sessions.tsx  Settings.tsx  Support.tsx  TrialProfile.tsx
eldri/src/utils/: storage.ts  theme.ts  themeTokens.ts
eldri/src/views/: SessionsView.tsx
